# connect-x

./: .gitignore  CMakeLists.txt
build-native/: CMakeCache.txt  Makefile  cmake_install.cmake
engine/: CMakeLists.txt
engine/include/connect-x/: Game.h  Player.h  participants.h
engine/src/: bindings.cpp
engine/src/game/: Game.cpp  LocalGame.cpp  LocalGame.h
engine/src/npc/: Difficulty.cpp  Evaluator.h
engine/src/player/: LocalPlayer.h  WebPlayer.cpp  WebPlayer.h  textStyle.h
game/src/board/: board.c  board.cpp
include/connect-x/: Game.h  NPCPlayer.h  Player.h  board.h
src/: main.cpp
src/board/: board.cpp
src/game/: Game.cpp  Player.cpp  Player.h
src/npc/: Difficulty.cpp  Difficulty.h  Evaluator.cpp  Evaluator.h  NPCPlayer.cpp
src/player/: LocalPlayer.cpp  LocalPlayer.h
webpage/: package-lock.json
webpage/src/engine-adapter/: WebPlayerAdapter.js
